Add item list; update when record is added

--- a/public/index.html
+++ b/public/index.html
@@ -48,15 +48,27 @@
                 <form class="pure-form pure-form-stacked" name="newItem" id="newItem">
                     <fieldset>
 
-                        <label for="name">New Item</label>
                         <input id="name" type="text" placeholder="add an item">
 
                     </fieldset>
                 </form>
             </div>
 
+            <div class="pure-u-1-5">&nbsp;</div>
         </div>
 
+        <div class="pure-g">
+            <div class="pure-u-1-5">&nbsp;</div>
+
+            <div class="l-box-lrg pure-u-3-5" id="itemList">
+                <ul>
+                    <li>Items go here</li>
+                    <li>Another item</li>
+                </ul>
+            </div>
+
+            <div class="pure-u-1-5">&nbsp;</div>
+        </div>
     </div>
 
     <div class="footer l-box is-center">
