--- a/public/index.html
+++ b/public/index.html
@@ -24,22 +24,8 @@
     </div>
 </div>
 
-<div class="splash-container">
-    <div class="splash">
-        <h1 class="splash-head">Shopping List</h1>
-        <p class="splash-subhead">
-            Keep track of your shopping list, todo list, or any other list
-        </p>
-        <p>
-            <a href="#name" class="pure-button pure-button-primary">Get Started</a>
-        </p>
-    </div>
-</div>
-
 <div class="content-wrapper">
     <div class="content">
-        <a name="content"></a>
-        <h2 class="content-head is-center">List Items</h2>
 
         <div class="pure-g">
             <div class="pure-u-1-5">&nbsp;</div>
@@ -72,7 +58,7 @@
     </div>
 
     <div class="footer l-box is-center">
-        View the source of this layout to learn more. Made with love by the YUI Team.
+        Sample app by @lornajane
     </div>
 
 </div>
